diesel_compile_tests/tests/ui/insertable_missing_table_or_column.stderr
error[E0433]: failed to resolve. Use of undeclared type or module `posts`
  --> $DIR/insertable_missing_table_or_column.rs:11:8
   |
11 | struct Post {
   |        ^^^^ Use of undeclared type or module `posts`

error[E0433]: failed to resolve. Use of undeclared type or module `posts`
  --> $DIR/insertable_missing_table_or_column.rs:16:16
   |
16 | #[table_name = "posts"]
   |                ^^^^^^^ Use of undeclared type or module `posts`

error[E0412]: cannot find type `name` in module `users`
  --> $DIR/insertable_missing_table_or_column.rs:21:10
   |
21 | #[derive(Insertable)]
   |          ^^^^^^^^^^ not found in `users`

error[E0425]: cannot find value `name` in module `users`
  --> $DIR/insertable_missing_table_or_column.rs:21:10
   |
21 | #[derive(Insertable)]
   |          ^^^^^^^^^^ not found in `users`

error[E0412]: cannot find type `name` in module `users`
  --> $DIR/insertable_missing_table_or_column.rs:27:10
   |
27 | #[derive(Insertable)]
   |          ^^^^^^^^^^ not found in `users`

error[E0425]: cannot find value `name` in module `users`
  --> $DIR/insertable_missing_table_or_column.rs:27:10
   |
27 | #[derive(Insertable)]
   |          ^^^^^^^^^^ not found in `users`

error: aborting due to 6 previous errors

Some errors occurred: E0412, E0425, E0433.
For more information about an error, try `rustc --explain E0412`.
